Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17197

Performance regression with "LU-15947 obdclass: improve precision of wakeups for mod_rpcs"

XMLWordPrintable

    • 3
    • 9223372036854775807

      A performance regression:

      Introduced MDTest Unique Directory Directory (-25%)/File Removal(-11%)/File Reads Regressions

      mdtest -v -i 5 -p 120 -C -w 32768 -E -e 32768 -T -r -n 3120 -u -d <dir>
      ...
      mdtest -v -i 5 -p 120 -C -E -T -r -n 3120 -u -d  <dir>
      

      Also an IOR 4k sequential read (-6%)

      ior -F -r -t 4k -D 180 -u -b 8g -o <path>
      ...
      Options: 
      api                 : POSIX
      apiVersion          : 
      test filename       : /mnt/kjlmo2/pkoutoupis/flash/test.05
      access              : file-per-process
      type                : independent
      segments            : 1
      ordering in a file  : sequential
      ordering inter file : no tasks offsets
      nodes               : 21
      tasks               : 336
      clients per node    : 16
      repetitions         : 1
      xfersize            : 4096 bytes
      blocksize           : 8 GiB
      aggregate filesize  : 2.62 TiB
      stonewallingTime    : 180
      stoneWallingWearOut : 0
      

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: